--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>whitebox-test</name>
 	<description>Simple notification service</description>
+	<packaging>pom</packaging>
+	<modules>
+		<module>java-monitor-service</module>
+		<module>notification-service</module>
+	</modules>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
