--- a/java-monitor-service/src/main/resources/application.properties
+++ b/java-monitor-service/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL55Dialect
+
+#Configure logging
+logging.level.root=info
