--- a/notification-service/pom.xml
+++ b/notification-service/pom.xml
@@ -14,7 +14,8 @@
 	<name>notification-service</name>
 	<description>Simple notification service</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
+		<maven.compiler.release>11</maven.compiler.release>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -70,7 +71,13 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${project.parent.version}</version>
+			</plugin>
 		</plugins>
+		<finalName>notification-service</finalName>
 	</build>
 
 </project>
